--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -117,6 +117,10 @@ footer{
     margin: auto;
 }
 
+#splashgif:hover{
+    opacity: 0.5;
+}
+
 #splashgif p{
     width: 300px;
     color: darkslategrey;
@@ -132,4 +136,5 @@ footer{
     font-family: 'Pacifico', cursive;
     text-align: center;
     margin: auto;
+    width:300px;
 }
